--- a/fabis-blog/package.json
+++ b/fabis-blog/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "ckeditor4-angular": "^2.1.0",
+    "mat-contenteditable": "^9.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
