--- a/fabis-blog/package.json
+++ b/fabis-blog/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@ckeditor/ckeditor5-angular": "^2.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^25.0.0",
     "ckeditor4-angular": "^2.1.0",
     "mat-contenteditable": "^9.1.0",
+    "ng2-ckeditor": "^1.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
