--- a/fabis-blog/package.json
+++ b/fabis-blog/package.json
@@ -26,6 +26,7 @@
     "ckeditor4-angular": "^2.1.0",
     "mat-contenteditable": "^9.1.0",
     "ng2-ckeditor": "^1.3.2",
+    "ngx-editor": "^8.0.0-beta.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
