--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.7.2",
     "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^2.4.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "morgan": "^1.9.1",
